[gd_scene load_steps=28 format=3 uid="uid://sjmycuqyqngb"]

[ext_resource type="Script" uid="uid://ci2mnmjydw3nc" path="res://Scripts/UI/main_menu.gd" id="1_ce3w2"]
[ext_resource type="AudioStream" uid="uid://criynfryg2lbe" path="res://Assets/Sounds/zastavochnaya.ogg" id="2_jewm6"]
[ext_resource type="Texture2D" uid="uid://c511ngkp6alme" path="res://Assets/UI/menu_3.png" id="2_k33u3"]
[ext_resource type="Texture2D" uid="uid://dx6lb674eeh3q" path="res://Assets/UI/menu_2.png" id="3_lrjdf"]
[ext_resource type="Texture2D" uid="uid://b7m4is85d0n5" path="res://Assets/UI/buttons.png" id="4_cp0ys"]
[ext_resource type="Texture2D" uid="uid://rwofu70jogev" path="res://Assets/UI/menu_1.png" id="4_wqme5"]
[ext_resource type="PackedScene" uid="uid://q3r58o0mbk7" path="res://Scenes/UI/button.tscn" id="4_yhxw7"]
[ext_resource type="PackedScene" uid="uid://lorxwmos4tmb" path="res://Scenes/UI/options.tscn" id="6_opfnp"]
[ext_resource type="Texture2D" uid="uid://dmc6sskmcw4ca" path="res://Assets/UI/sineus.png" id="7_cp0ys"]
[ext_resource type="Shader" path="res://Assets/vignette.gdshader" id="9_lrjdf"]
[ext_resource type="Texture2D" uid="uid://diy5im1mg38f4" path="res://Assets/UI/boombox.png" id="10_wqme5"]
[ext_resource type="Texture2D" uid="uid://b5hketpb2uv7b" path="res://Assets/UI/text logo.png" id="12_cejvf"]
[ext_resource type="PackedScene" uid="uid://tqtrkchr3jl6" path="res://Scenes/UI/small_button.tscn" id="12_ru8vt"]

[sub_resource type="Animation" id="Animation_cejvf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Background/Boombox:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Camera2D:zoom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_jewm6"]
resource_name = "song"
length = 45.0
loop_mode = 1
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("2_jewm6")
}],
"times": PackedFloat32Array(0)
}
tracks/0/use_blend = true
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Background/Boombox:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.43333334, 2.7666667, 3.1333334, 5.5, 6, 8.233334, 8.8, 10.966666, 11.4, 13.733333, 14.099999, 16.466667, 16.966667, 22.066668, 22.166666, 22.932037, 23.032038, 23.466667, 23.566668, 24.321749, 24.42175, 24.83064, 24.93064, 25.69601, 25.796011, 26.23064, 26.33064, 27.085722, 27.185722, 27.584593, 27.684591, 28.449963, 28.549963, 28.984592, 29.084593, 29.839674, 29.939674, 30.34165, 30.441648, 31.20702, 31.30702, 31.74165, 31.84165, 32.596733, 32.69673, 33.10342, 33.20342, 33.96879, 34.06879, 34.503418, 34.60342, 35.3585, 35.458504, 35.867393, 35.967392, 36.732765, 36.832764, 37.267395, 37.367393, 37.735317, 37.835316, 38.122475, 38.222473, 38.621346, 38.721344, 39.486717, 39.586716, 40.021347, 40.121346, 40.876427, 40.976425, 41.378403, 41.4784, 41.725388, 41.825386, 42.06419, 42.16419, 42.4, 42.5, 42.778404, 42.878403, 43.105694, 43.166668, 43.26882, 43.329796, 43.433334, 43.49431, 43.600002, 43.660976, 43.789574, 43.850548),
"transitions": PackedFloat32Array(0.08838832, 1.464086, 0.08838832, 1.464086, 0.08838832, 1.464086, 0.08838832, 1.464086, 0.08838832, 1.464086, 0.08838832, 1.464086, 0.08838832, 1.464086, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832, 0.08838832),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 0.8), Vector2(1, 1), Vector2(1, 0.8), Vector2(1, 1), Vector2(1, 0.8), Vector2(1, 1), Vector2(1, 0.8), Vector2(1, 1), Vector2(1, 0.8), Vector2(1, 1), Vector2(1, 0.8), Vector2(1, 1), Vector2(1, 0.8), Vector2(1, 1), Vector2(1, 0.8), Vector2(1, 1), Vector2(1, 0.8), Vector2(1, 1), Vector2(1, 0.8), Vector2(1, 1), Vector2(1, 0.8), Vector2(1, 1), Vector2(1, 0.8), Vector2(1, 1), Vector2(1, 0.8), Vector2(1, 1), Vector2(1, 0.8), Vector2(1, 1), Vector2(1, 0.8), Vector2(1, 1), Vector2(1, 0.8), Vector2(1, 1), Vector2(1, 0.8), Vector2(1, 1), Vector2(1, 0.8), Vector2(1, 1), Vector2(1, 0.8), Vector2(1, 1), Vector2(1, 0.8), Vector2(1, 1), Vector2(1, 0.8), Vector2(1, 1), Vector2(1, 0.8), Vector2(1, 1), Vector2(1, 0.8), Vector2(1, 1), Vector2(1, 0.8), Vector2(1, 1), Vector2(1, 0.8), Vector2(1, 1), Vector2(1, 0.8), Vector2(1, 1), Vector2(1, 0.8), Vector2(1, 1), Vector2(1, 0.8), Vector2(1, 1), Vector2(1, 0.8), Vector2(1, 1), Vector2(1, 0.8), Vector2(1, 1), Vector2(1, 0.8), Vector2(1, 1), Vector2(1, 0.8), Vector2(1, 1), Vector2(1, 0.8), Vector2(1, 1), Vector2(1, 0.8), Vector2(1, 1), Vector2(1, 0.8), Vector2(1, 1), Vector2(1, 0.8), Vector2(1, 1), Vector2(1, 0.8), Vector2(1, 1), Vector2(1, 0.8), Vector2(1, 1), Vector2(1, 0.8), Vector2(1, 1), Vector2(1, 0.8), Vector2(1, 1), Vector2(1, 0.8), Vector2(1, 1), Vector2(1, 0.8), Vector2(1, 1), Vector2(1, 0.8), Vector2(1, 1), Vector2(1, 0.8), Vector2(1, 1), Vector2(1, 0.8), Vector2(1, 1), Vector2(1, 0.8)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Camera2D:zoom")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.43333334, 2.7607756, 3.194109, 5.478755, 5.9120884, 8.239531, 8.672864, 10.95751, 11.390843, 13.718286, 14.151619, 16.436264, 16.869598, 22.066668, 22.166666, 22.932156, 23.032154, 23.466295, 23.566294, 24.321154, 24.421152, 24.82829, 24.92829, 25.693779, 25.793777, 26.227919, 26.327917, 27.082777, 27.182775, 27.6, 27.699999, 28.465488, 28.565487, 28.999628, 29.099627, 29.854486, 29.954485, 30.340494, 30.440493, 31.205982, 31.30598, 31.740122, 31.84012, 32.59498, 32.694977, 33.105392, 33.20539, 33.97088, 34.070877, 34.50502, 34.60502, 35.35988, 35.459877, 35.86667, 35.966667, 36.732155, 36.832153, 37.266296, 37.366295, 38.121155, 38.221153, 38.633335, 38.733334, 39.498825, 39.598824, 40.032963, 40.13296, 40.88782, 40.98782, 41.366665, 41.466663, 41.72969, 41.82969, 42.066666, 42.166664, 42.39264, 42.492638, 42.729614, 42.829613, 43.100002, 43.2, 43.436977, 43.536976),
"transitions": PackedFloat32Array(0.08838832, 1.464086, 0.08838832, 1.464086, 0.08838832, 1.464086, 0.08838832, 1.464086, 0.08838832, 1.464086, 0.08838832, 1.464086, 0.08838832, 1.464086, 0.08838832, 1.464086, 0.08838832, 1.464086, 0.08838832, 1.464086, 0.08838832, 1.464086, 0.08838832, 1.464086, 0.08838832, 1.464086, 0.08838832, 1.464086, 0.08838832, 1.464086, 0.08838832, 1.464086, 0.08838832, 1.464086, 0.08838832, 1.464086, 0.08838832, 1.464086, 0.08838832, 1.464086, 0.08838832, 1.464086, 0.08838832, 1.464086, 0.08838832, 1.464086, 0.08838832, 1.464086, 0.08838832, 1.464086, 0.08838832, 1.464086, 0.08838832, 1.464086, 0.08838832, 1.464086, 0.08838832, 1.464086, 0.08838832, 1.464086, 0.08838832, 1.464086, 0.08838832, 1.464086, 0.08838832, 1.464086, 0.08838832, 1.464086, 0.08838832, 1.464086, 0.08838832, 1.464086, 0.08838832, 1.464086, 0.08838832, 1.464086, 0.08838832, 1.464086, 0.08838832, 1.464086, 0.08838832, 1.464086, 0.08838832, 1.464086),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.02, 1.02), Vector2(1, 1), Vector2(1.02, 1.02), Vector2(1, 1), Vector2(1.02, 1.02), Vector2(1, 1), Vector2(1.02, 1.02), Vector2(1, 1), Vector2(1.02, 1.02), Vector2(1, 1), Vector2(1.02, 1.02), Vector2(1, 1), Vector2(1.02, 1.02), Vector2(1, 1), Vector2(1.02, 1.02), Vector2(1, 1), Vector2(1.02, 1.02), Vector2(1, 1), Vector2(1.02, 1.02), Vector2(1, 1), Vector2(1.02, 1.02), Vector2(1, 1), Vector2(1.02, 1.02), Vector2(1, 1), Vector2(1.02, 1.02), Vector2(1, 1), Vector2(1.02, 1.02), Vector2(1, 1), Vector2(1.02, 1.02), Vector2(1, 1), Vector2(1.02, 1.02), Vector2(1, 1), Vector2(1.02, 1.02), Vector2(1, 1), Vector2(1.02, 1.02), Vector2(1, 1), Vector2(1.02, 1.02), Vector2(1, 1), Vector2(1.02, 1.02), Vector2(1, 1), Vector2(1.02, 1.02), Vector2(1, 1), Vector2(1.02, 1.02), Vector2(1, 1), Vector2(1.02, 1.02), Vector2(1, 1), Vector2(1.02, 1.02), Vector2(1, 1), Vector2(1.02, 1.02), Vector2(1, 1), Vector2(1.02, 1.02), Vector2(1, 1), Vector2(1.02, 1.02), Vector2(1, 1), Vector2(1.02, 1.02), Vector2(1, 1), Vector2(1.02, 1.02), Vector2(1, 1), Vector2(1.02, 1.02), Vector2(1, 1), Vector2(1.02, 1.02), Vector2(1, 1), Vector2(1.02, 1.02), Vector2(1, 1), Vector2(1.02, 1.02), Vector2(1, 1), Vector2(1.02, 1.02), Vector2(1, 1), Vector2(1.02, 1.02), Vector2(1, 1), Vector2(1.02, 1.02), Vector2(1, 1), Vector2(1.02, 1.02), Vector2(1, 1), Vector2(1.02, 1.02), Vector2(1, 1), Vector2(1.02, 1.02), Vector2(1, 1), Vector2(1.02, 1.02), Vector2(1, 1), Vector2(1.02, 1.02), Vector2(1, 1), Vector2(1.02, 1.02)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ru8vt"]
_data = {
&"RESET": SubResource("Animation_cejvf"),
&"song": SubResource("Animation_jewm6")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_trj04"]
resource_local_to_scene = true
atlas = ExtResource("4_cp0ys")
region = Rect2(0, 0, 228, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_16hvj"]
resource_local_to_scene = true
atlas = ExtResource("4_cp0ys")
region = Rect2(228, 0, 228, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_vr1f0"]
resource_local_to_scene = true
atlas = ExtResource("4_cp0ys")
region = Rect2(0, 80, 228, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1dhk"]
resource_local_to_scene = true
atlas = ExtResource("4_cp0ys")
region = Rect2(228, 80, 228, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_xp0kt"]
resource_local_to_scene = true
atlas = ExtResource("4_cp0ys")
region = Rect2(0, 560, 228, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_1yfdm"]
resource_local_to_scene = true
atlas = ExtResource("4_cp0ys")
region = Rect2(228, 560, 228, 80)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wqme5"]
shader = ExtResource("9_lrjdf")
shader_parameter/alpha = 1.0
shader_parameter/inner_radius = 0.5
shader_parameter/outer_radius = 1.6

[sub_resource type="AtlasTexture" id="AtlasTexture_ru8vt"]
resource_local_to_scene = true
atlas = ExtResource("4_cp0ys")
region = Rect2(0, 240, 228, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ypsd1"]
resource_local_to_scene = true
atlas = ExtResource("4_cp0ys")
region = Rect2(228, 240, 228, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_3h8o7"]
resource_local_to_scene = true
atlas = ExtResource("4_cp0ys")
region = Rect2(0, 160, 228, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_q6o50"]
resource_local_to_scene = true
atlas = ExtResource("4_cp0ys")
region = Rect2(228, 160, 228, 80)

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_ce3w2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../AudioStreamPlayer")
libraries = {
&"": SubResource("AnimationLibrary_ru8vt")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = &"Music"

[node name="Camera2D" type="Camera2D" parent="."]

[node name="BackgroundParallax" type="Sprite2D" parent="."]
scale = Vector2(1.1186185, 1.1186185)
texture = ExtResource("2_k33u3")

[node name="Background2" type="Sprite2D" parent="."]
scale = Vector2(1.0744377, 1.0744376)
texture = ExtResource("3_lrjdf")

[node name="Background" type="Sprite2D" parent="."]
scale = Vector2(1.0211455, 1.0211455)
texture = ExtResource("4_wqme5")

[node name="Boombox" type="Sprite2D" parent="Background"]
position = Vector2(359.0909, 303.63635)
texture = ExtResource("10_wqme5")
offset = Vector2(52, -172)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
offset = Vector2(-960, -540)
transform = Transform2D(1, 0, 0, 1, -960, -540)

[node name="Buttons" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_left = 951.0
offset_top = 4959.0
offset_right = 991.0
offset_bottom = 4999.0

[node name="TextLogo" type="Sprite2D" parent="CanvasLayer/Buttons"]
position = Vector2(597, -4159)
texture = ExtResource("12_cejvf")

[node name="ButtonPlay" parent="CanvasLayer/Buttons" instance=ExtResource("4_yhxw7")]
layout_mode = 0
offset_left = 223.63983
offset_top = -3932.9583
offset_right = 451.63983
offset_bottom = -3852.9583
texture_normal = SubResource("AtlasTexture_trj04")
texture_hover = SubResource("AtlasTexture_16hvj")

[node name="ButtonOptions" parent="CanvasLayer/Buttons" instance=ExtResource("4_yhxw7")]
layout_mode = 0
offset_left = 223.63983
offset_top = -3797.9583
offset_right = 451.63983
offset_bottom = -3717.9583
texture_normal = SubResource("AtlasTexture_vr1f0")
texture_hover = SubResource("AtlasTexture_t1dhk")

[node name="ButtonExit" parent="CanvasLayer/Buttons" instance=ExtResource("4_yhxw7")]
layout_mode = 0
offset_left = 222.63977
offset_top = -3658.9583
offset_right = 450.63977
offset_bottom = -3578.9583
texture_normal = SubResource("AtlasTexture_xp0kt")
texture_hover = SubResource("AtlasTexture_1yfdm")

[node name="Options" parent="CanvasLayer" instance=ExtResource("6_opfnp")]
visible = false
offset_left = 949.0
offset_top = 541.0
offset_right = 989.0
offset_bottom = 581.0

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_wqme5")
offset_left = 936.0
offset_top = 522.0
offset_right = 2902.0
offset_bottom = 1647.0
mouse_filter = 2

[node name="CharSelect" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/CharSelect"]
layout_mode = 0
offset_left = 832.0
offset_top = 296.0
offset_right = 3078.0
offset_bottom = 1855.0
color = Color(0, 0, 0, 0.5176471)

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer/CharSelect"]
layout_mode = 0
offset_left = 1481.3611
offset_top = 902.0
offset_right = 2409.361
offset_bottom = 1163.0
color = Color(0, 0, 0, 1)

[node name="ButtonPrevChar" parent="CanvasLayer/CharSelect" instance=ExtResource("12_ru8vt")]
layout_mode = 0
offset_left = 1164.361
offset_top = 952.0
offset_right = 1292.361
offset_bottom = 1080.0
scale = Vector2(-1.6, 1.6)

[node name="ButtonNextChar" parent="CanvasLayer/CharSelect" instance=ExtResource("12_ru8vt")]
layout_mode = 0
offset_left = 2489.361
offset_top = 944.0
offset_right = 2617.361
offset_bottom = 1072.0

[node name="ButtonSelectChar" parent="CanvasLayer/CharSelect" instance=ExtResource("4_yhxw7")]
layout_mode = 0
offset_left = 1828.3612
offset_top = 1271.0
offset_right = 2056.3613
offset_bottom = 1351.0
texture_normal = SubResource("AtlasTexture_ru8vt")
texture_hover = SubResource("AtlasTexture_ypsd1")

[node name="CharName" type="Label" parent="CanvasLayer/CharSelect"]
layout_mode = 0
offset_left = 1735.3611
offset_top = 969.0
offset_right = 2144.361
offset_bottom = 1087.0
theme_override_font_sizes/font_size = 86
text = "Character"
horizontal_alignment = 1

[node name="ButtonClose" parent="CanvasLayer/CharSelect" instance=ExtResource("4_yhxw7")]
layout_mode = 0
offset_left = 1138.9999
offset_top = 1446.0
offset_right = 1366.9999
offset_bottom = 1526.0
texture_normal = SubResource("AtlasTexture_3h8o7")
texture_hover = SubResource("AtlasTexture_q6o50")

[node name="Label" type="Label" parent="CanvasLayer/CharSelect"]
layout_mode = 0
offset_left = 1461.0
offset_top = 639.0
offset_right = 2447.0
offset_bottom = 777.0
theme_override_font_sizes/font_size = 101
text = "Выбери персонажа:"

[node name="Intro" type="Control" parent="CanvasLayer"]
visible = false
z_index = 99
layout_mode = 3
anchors_preset = 0
offset_left = 1935.0
offset_top = 1080.0
offset_right = 1975.0
offset_bottom = 1120.0
mouse_filter = 1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Intro"]
layout_mode = 0
offset_left = -1557.0
offset_top = -973.0
offset_right = 1565.0
offset_bottom = 1006.0
color = Color(0, 0, 0, 1)

[node name="Sineus" type="Sprite2D" parent="CanvasLayer/Intro"]
visible = false
position = Vector2(-61.000008, -5)
scale = Vector2(1.359375, 1.3593751)
texture = ExtResource("7_cp0ys")

[connection signal="pressed" from="CanvasLayer/Buttons/ButtonPlay" to="." method="_on_button_play_pressed"]
[connection signal="pressed" from="CanvasLayer/Buttons/ButtonOptions" to="." method="_on_button_options_pressed"]
[connection signal="pressed" from="CanvasLayer/Buttons/ButtonExit" to="." method="_on_button_exit_pressed"]
[connection signal="pressed" from="CanvasLayer/CharSelect/ButtonPrevChar" to="." method="_on_button_prev_char_pressed"]
[connection signal="pressed" from="CanvasLayer/CharSelect/ButtonNextChar" to="." method="_on_button_next_char_pressed"]
[connection signal="pressed" from="CanvasLayer/CharSelect/ButtonSelectChar" to="." method="_on_button_select_char_pressed"]
[connection signal="pressed" from="CanvasLayer/CharSelect/ButtonClose" to="." method="_on_button_close_pressed"]
